<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>

    <import type="com.udacity.nanodegree.blooddonation.util.Util"/>

    <variable
        name="presenter"
        type="com.udacity.nanodegree.blooddonation.ui.home.RequestDialogContract.Presenter"
        />
    <variable
        name="requestDetails"
        type="com.udacity.nanodegree.blooddonation.ui.home.model.RequestDetails"
        />
  </data>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      android:padding="@dimen/dp_16"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        >

      <android.support.v7.widget.AppCompatTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:text="@string/i_want_to"
          android:textAppearance="@style/TextAppearance.AppCompat.Large"
          app:layout_constraintStart_toStartOf="@+id/tv_location_picker"
          />

      <Spinner
          android:id="@+id/request_drop_down"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:background="@drawable/edit_text_border"
          android:padding="@dimen/dp_16"
          android:entries="@array/blood_request"
          tools:listitem="@layout/support_simple_spinner_dropdown_item"
          app:observableString="@{requestDetails.requestType}"
          app:setPos="@{true}"
          style="@style/Base.Widget.AppCompat.Spinner.Underlined"
          />

      <android.support.v7.widget.AppCompatTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:text="@string/select_blood_group"
          android:textAppearance="@style/TextAppearance.AppCompat.Large"
          />

      <!--Blood group-->
      <Spinner
          android:id="@+id/blood_group_drop_down"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:background="@drawable/edit_text_border"
          android:padding="@dimen/dp_16"
          android:entries="@array/blood_group"
          tools:listitem="@layout/support_simple_spinner_dropdown_item"
          app:observableString="@{requestDetails.bloodGroup}"
          style="@style/Base.Widget.AppCompat.Spinner.Underlined"
          />

      <android.support.v7.widget.AppCompatEditText
          android:id="@+id/et_purpose"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:background="@drawable/edit_text_border"
          android:gravity="start"
          android:hint="@string/txt_purpose"
          android:inputType="textCapSentences|textMultiLine"
          android:maxLength="150"
          android:maxLines="4"
          android:minLines="4"
          android:text="@{requestDetails.purpose}"
          android:padding="@dimen/dp_8"
          app:binding="@{requestDetails.purpose}"
          />

      <android.support.v7.widget.AppCompatTextView
          android:id="@+id/tv_location_picker"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:background="@drawable/edit_text_border"
          android:drawableEnd="@drawable/ic_location_on_red_24dp"
          android:drawableRight="@drawable/ic_location_on_red_24dp"
          android:hint="@string/hint_location"
          android:onClick="@{()->presenter.onLocationClick()}"
          android:padding="@dimen/dp_30"
          />

      <Button
          android:id="@+id/submit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="@dimen/dp_16"
          android:onClick="@{()->presenter.onSubmitButtonClick(requestDetails)}"
          android:text="@string/submit"
          style="@style/Widget.AppCompat.Button.Colored"
          />

    </LinearLayout>

  </ScrollView>
</layout>