<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>

    <import type="android.view.View"/>

    <variable
        name="regisInfo"
        type="com.udacity.nanodegree.blooddonation.ui.login.UserLoginInfo"
        />

    <variable
        name="presenter"
        type="com.udacity.nanodegree.blooddonation.ui.login.UserLoginContract.Presenter"
        />
  </data>


  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="@dimen/dp_8"
      >


    <!--Registration-->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="@{!regisInfo.isCodeSent ? View.VISIBLE : View.GONE}"
        tools:visibility="visible">

      <com.rilixtech.CountryCodePicker
          android:id="@+id/cc_country_code"
          app:ccp_defaultNameCode="IN"
          app:ccp_showFullName="true"
          app:ccp_enableHint="false"
          android:layout_width="@dimen/dp_0"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/dp_8"
          android:layout_marginEnd="@dimen/dp_16"
          android:layout_marginLeft="@dimen/dp_16"
          android:layout_marginRight="@dimen/dp_16"
          android:layout_marginStart="@dimen/dp_16"
          android:layout_marginTop="@dimen/dp_8"
          app:layout_constraintBottom_toTopOf="@+id/et_phone_number"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_chainStyle="packed" />

      <android.support.v7.widget.AppCompatEditText
          android:id="@+id/et_phone_number"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginEnd="@dimen/dp_16"
          android:layout_marginLeft="@dimen/dp_16"
          android:layout_marginRight="@dimen/dp_16"
          android:layout_marginStart="@dimen/dp_16"
          android:layout_marginTop="@dimen/dp_16"
          android:hint="@string/enter_phone_number"
          android:inputType="number"
          android:text="@{regisInfo.phoneNumber}"
          android:addTextChangedListener="@{regisInfo.phoneNumberWatcher}"
          app:layout_constraintBottom_toTopOf="@+id/bv_in"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/cc_country_code" />

      <Button
          android:id="@+id/bv_in"
          android:layout_width="@dimen/dp_0"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginBottom="@dimen/dp_16"
          android:layout_marginEnd="@dimen/dp_16"
          android:layout_marginLeft="@dimen/dp_16"
          android:layout_marginRight="@dimen/dp_16"
          android:layout_marginStart="@dimen/dp_16"
          android:layout_marginTop="@dimen/dp_8"
          android:onClick="@{() -> presenter.onIamInButtonClick(regisInfo.phoneNumber,regisInfo.phoneCode)}"
          android:text="@string/iam_in"
          android:textAllCaps="true"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/et_phone_number" />

    </android.support.constraint.ConstraintLayout>
    <!--Verification-->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_verification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:visibility="@{regisInfo.isCodeSent ? View.VISIBLE : View.GONE}"
        tools:visibility="gone"
        >

      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dp_8"
          android:layout_marginLeft="@dimen/dp_8"
          android:layout_marginRight="@dimen/dp_8"
          android:layout_marginStart="@dimen/dp_8"
          android:layout_marginTop="@dimen/dp_8"
          android:text="@string/verify_mobile_number"
          android:textStyle="bold"
          android:textSize="@dimen/sp_20"
          app:layout_constraintBottom_toTopOf="@+id/tv_verify_label"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/tv_verify_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dp_16"
          android:layout_marginLeft="@dimen/dp_16"
          android:layout_marginRight="@dimen/dp_16"
          android:layout_marginStart="@dimen/dp_16"
          android:layout_marginTop="@dimen/dp_16"
          android:text="@string/otp_sent_text"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.503"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView2" />

      <EditText
          android:id="@+id/et_otp"
          android:layout_width="@dimen/dp_0"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:layout_marginEnd="@dimen/dp_16"
          android:layout_marginLeft="@dimen/dp_16"
          android:layout_marginRight="@dimen/dp_16"
          android:layout_marginStart="@dimen/dp_16"
          android:layout_marginTop="@dimen/dp_16"
          android:addTextChangedListener="@{regisInfo.otpWatcher}"
          android:text="@{regisInfo.otp}"
          android:hint="@string/hint_otp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_verify_label" />

      <TextView
          android:id="@+id/tv_countdown"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dp_16"
          android:layout_marginRight="@dimen/dp_16"
          android:layout_marginTop="@dimen/dp_16"
          android:text="@string/countdown"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/et_otp" />

      <Button
          android:id="@+id/bv_verify"
          android:layout_width="@dimen/dp_0"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dp_16"
          android:layout_marginLeft="@dimen/dp_16"
          android:layout_marginRight="@dimen/dp_16"
          android:layout_marginStart="@dimen/dp_16"
          android:layout_marginTop="@dimen/dp_16"
          android:onClick="@{() -> presenter.onVerifyOtpButtonClick(regisInfo.otp)}"
          android:text="@string/verify"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_countdown" />

      <Button
          android:id="@+id/btn_resend_code"
          android:layout_width="@dimen/dp_0"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dp_16"
          android:layout_marginLeft="@dimen/dp_16"
          android:layout_marginRight="@dimen/dp_16"
          android:layout_marginStart="@dimen/dp_16"
          android:text="@string/resend_code"
          android:visibility="gone"
          android:onClick="@{() -> presenter.onResendCodeButtonClick()}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/bv_verify" />



    </android.support.constraint.ConstraintLayout>


    <ProgressBar
        android:id="@+id/pb_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="gone"
        />

  </RelativeLayout>

</layout>